<resources>
    <string name="app_name">Time Tracking</string>
    <string name="action_new">Новая запись</string>
    <string name="action_freq">Самые частые занятия</string>
    <string name="action_max_sum">Наибольшее суммарное время</string>
    <string name="action_category_sum">Суммарное время по категориям</string>
    <string name="action_diag">Диаграмма</string>
    <string name="stats">Статистика</string>
    <string name="diag_text">Суммарное время по категориям в минутах</string>
    <string name="category">Категория</string>

    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="description">Описание</string>
    <string name="start_time">Время начала</string>
    <string name="end_time">Время окончания</string>
    <string name="duration">Продолжительность</string>
    <string name="from">С </string>
    <string name="to">По </string>
    <string name="minutes">минут</string>
    <string name="pick_date">Выберите дату</string>
    <string name="pick_time">Выберите время</string>
    <string name="take_pic">Добавить фото</string>
    <string name="save">СОХРАНИТЬ</string>

    <string name="delete">Удалить</string>

    <string name="date_error">Пожалуйста, укажите дату.</string>
    <string name="start_time_error">Пожалуйста, укажите время начала.</string>
    <string name="end_time_error">Пожалуйста, укажите время окончания.</string>
    <string name="time_error">Время начала должно быть меньше времени окончания.</string>
    <string name="photo">Фото</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="find">Найти</string>
    <string name="title_activity_most_freq">MostFreqActivity</string>
    <string name="title_activity_most_durable">MostDurableActivity</string>
    <string name="title_activity_diagram">DiagramActivity</string>
    <string name="title_activity_sum_by_categories">SumByCategoriesActivity</string>
</resources>
